Updated SYSTEM QUERYING